# falco-prometheus-stack

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile.analyzer  Dockerfile.backend  Dockerfile.falco  Dockerfile.prometheus  Dockerfile.reducer  PRODUCT_INTRODUCTION.md  README.md  docker-compose.app.yml  docker-compose.images.yml  docker-compose.yml  export_hanabi_images.sh  pyproject.toml  test_final_verify.py  test_optimization.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task-alerts.md  task-logs.md  task-shared.md  task.md
.github/workflows/: backend.yml  frontend.yml
analyzer/: requirements.txt  service.py
api/: README.md
api/app/: main.py
api/app/core/: config.py
api/app/routers/: alerts.py  config.py  containers.py  hbt.py  incidents.py  (+3 more)
docs/: backend-api-contract.md  frontend-setup.md  issue-labels.md  issues-alpha.md  issues-beta.md  issues-overview.md  issues-rc.md  promql-templates.md  roadmap.md  sse-envelope.md  system-architecture.md  tech-stack.md  test-plan.md
docs/interfaces/: openapi.yaml
falco/: custom_rules.yaml
grafana/: dashboard.json
hanabi/: reducer.py  worker.py
hanabi/models/: branch_handlers.py  embedding.py
hanabi/utils/: queue.py  timeCount.py
ingestors/alerts/: main.py
ingestors/logs/: main.py
prometheus/: exporter.py  prometheus.yml  test_exporter.py
reducer/: service.py
web/: Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/public/: runtime-config.js
web/src/: App.tsx
(+12 files in other folders)
