[project]
name = "falco-prometheus-stack"
version = "0.1.0"
description = "Falco/Hanabi Monitoring Stack"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docker>=7.1.0",
    "flask>=3.1.2",
    "prometheus-client>=0.23.1",
    "waitress>=3.0.2",
    "rich>=13.9.4",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
